[tool.poetry]
name = "robo-advisor"
version = "0.1.0"
description = "a robo advisor that is built on machine learning"
authors = ["hy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
loguru = "^0.7.2"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
xgboost = "^2.0.3"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^23.12.1"
docformatter = "^1.7.5"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
ipykernel = "^6.28.0"
lightgbm = "^4.2.0"
matplotlib = "^3.8.2"
quandl = "^3.7.0"
pyyaml = "^6.0.1"
google-cloud-bigquery = "^3.16.0"
colorama = "^0.4.6"
pydantic = "^2.5.3"
pandera = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 89
extend-ignore = "E203, W503, E501"